# readline

./: CMakeLists.txt  README.md  config.h.in  readline.c  readline.h
examples/: CMakeLists.txt  example.c
